--- a/style.css
+++ b/style.css
@@ -615,12 +615,12 @@ main {
 
 body.dark .header {
   background-image: linear-gradient(#0000008b, #000000e6),
-    url("assets/images/webs.png");
+    url("assets/images/banner/space.jpeg");
 }
 
 body.light .header {
   background-image: linear-gradient(#ffffffa2, #ffffffe6),
-    url("assets/images/webs.png");
+    url("assets/images/banner/space.jpeg");
 }
 
 .header-textbox {
